Сделал основной дизайн.